# AI-System-Ship-Gemini

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  PROJECT_STRUCTURE.md  README.md  REFACTOR_UIUX.md  environment.yml  package-lock.json  package.json
AI-System-Ship-Backend-dev/: .gitignore  README.md  index.html  index_event.html  index_predict.html  index_select_all.html  package-lock.json  package.json  run_manual_analysis.js  server.js
AI-System-Ship-Backend-dev/trajectoryPrediction/: .gitignore  README.md  TODO.md  _torch_check.py  config.py  database.py  dataset.py  load_trajectories.py  main.py  predict_traj.py  pyproject.toml  test.py  train.py  train.sh
AI-System-Ship-Backend-dev/trajectoryPrediction/aisStream/: BaseStationReport.py  PositionReport.py  ShipStaticData.py  fetch_settings.json  preprocess.py  preprocess_multiproc_test.py  trajectory_map.html  trajectory_plot.py
AI-System-Ship-Backend-dev/trajectoryPrediction/geometricUtils/: compute_distance.py
AI-System-Ship-Backend-dev/trajectoryPrediction/marineTraffic/: cron.zsh  db_check.py  launchd.zsh  norm_stats.json  preprocess.py  preprocess_async.py  test_preprocess_pipeline.py  vesselPosition.py  vesselPositionTest.py  vessel_position_format.md  vessel_position_test.json
AI-System-Ship-Backend-dev/trajectoryPrediction/models/: bigru.py
AI-System-Ship-Backend-dev/trajectoryPrediction/savedModel/: check_saved_model.py
AI-System-Ship-Backend-dev/trajectoryPrediction/utils/: dataset_utils.py  utils.py
RAG/: .gitignore  autogen_llm_config.py  prompt.py  rag_agent.py  test_business_tpm.py  (+1 more)
(+155 files in other folders)
